[gd_scene load_steps=7 format=2]

[ext_resource path="res://scripts/Ball.gd" type="Script" id=1]
[ext_resource path="res://assets/ball.png" type="Texture" id=2]
[ext_resource path="res://assets/font/KenPixel Mini Square.ttf" type="DynamicFontData" id=3]

[sub_resource type="PhysicsMaterial" id=3]

[sub_resource type="CircleShape2D" id=1]
radius = 16.0

[sub_resource type="DynamicFont" id=2]
size = 12
font_data = ExtResource( 3 )

[node name="Ball" type="RigidBody2D"]
input_pickable = true
physics_material_override = SubResource( 3 )
script = ExtResource( 1 )

[node name="Sprite" type="Sprite" parent="."]
texture = ExtResource( 2 )

[node name="BallCollision" type="CollisionShape2D" parent="."]
shape = SubResource( 1 )

[node name="DestroyTimer" type="Timer" parent="."]

[node name="DestroyTimerLabel" type="Label" parent="."]
margin_left = -24.6489
margin_top = -9.9437
margin_right = 15.3511
margin_bottom = 10.0563
custom_fonts/font = SubResource( 2 )
custom_colors/font_color = Color( 0, 0, 0, 1 )
text = "0"
align = 1
valign = 1
[connection signal="input_event" from="." to="." method="_on_Ball_input_event"]
[connection signal="timeout" from="DestroyTimer" to="." method="_on_DestroyTimer_timeout"]
